NEW: Add ejb module and arquillian tests.